--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         <img src="img/logo.png" alt="logo" class="logo" width="200px">
         <!--Buttons(12Keys)-->
         <div>
-            <button class="btn rootBtn C" data-key="root" data-value="C">C</button>
-            <button class="btn rootBtn Db" data-key="root" data-value="Db">Db</button>
-            <button class="btn rootBtn D" data-key="root" data-value="D">D</button>
-            <button class="btn rootBtn Eb" data-key="root" data-value="Eb">Eb</button>
-            <button class="btn rootBtn E" data-key="root" data-value="E">E</button>
-            <button class="btn rootBtn F" data-key="root" data-value="F">F</button>
-            <button class="btn rootBtn Gb" data-key="root" data-value="Gb">Gb</button>
-            <button class="btn rootBtn G" data-key="root" data-value="G">G</button>
-            <button class="btn rootBtn Ab" data-key="root" data-value="Ab">Ab</button>
-            <button class="btn rootBtn A" data-key="root" data-value="A">A</button>
-            <button class="btn rootBtn Bb" data-key="root" data-value="Bb">Bb</button>
-            <button class="btn rootBtn B" data-key="root" data-value="B">B</button>
+            <button class="btn rootBtn c" data-key="root" data-value="C">C</button>
+            <button class="btn rootBtn db" data-key="root" data-value="Db">Db</button>
+            <button class="btn rootBtn d" data-key="root" data-value="D">D</button>
+            <button class="btn rootBtn eb" data-key="root" data-value="Eb">Eb</button>
+            <button class="btn rootBtn e" data-key="root" data-value="E">E</button>
+            <button class="btn rootBtn f" data-key="root" data-value="F">F</button>
+            <button class="btn rootBtn gb" data-key="root" data-value="Gb">Gb</button>
+            <button class="btn rootBtn g" data-key="root" data-value="G">G</button>
+            <button class="btn rootBtn ab" data-key="root" data-value="Ab">Ab</button>
+            <button class="btn rootBtn a" data-key="root" data-value="A">A</button>
+            <button class="btn rootBtn bb" data-key="root" data-value="Bb">Bb</button>
+            <button class="btn rootBtn b" data-key="root" data-value="B">B</button>
         </div>
         <!--Buttons(Scales)-->
         <div>
